Actions
Bug #10615
closednsmb: NULL pointer errors
Start date:
2019-03-30
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
In file included from ../../common/sys/param.h:48:0, from ../../common/fs/smbclnt/netsmb/smb_dev.c:40: ../../common/fs/smbclnt/netsmb/smb_dev.c: In function 'nsmb_attach': ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/fs/smbclnt/netsmb/smb_dev.c:286:6: note: in expansion of macro 'NULL' NULL) == DDI_FAILURE) { ^~~~ In file included from ../../common/fs/smbclnt/netsmb/smb_dev.c:53:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Marcel Telka about 3 years ago
- Subject changed from nsmb: NULL pointerr errors to nsmb: NULL pointer errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 25a5294972c1d74b8257cf0ec6d7a93f2da6a8ca
commit 25a5294972c1d74b8257cf0ec6d7a93f2da6a8ca Author: Toomas Soome <tsoome@me.com> Date: 2019-05-15T05:58:14.000Z 10615 nsmb: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions